# hashcode2018

./: .gitignore  README.md
andrewgark/: a.out  annealing.cpp  answer.cpp  answer.h  result.txt
iskhakovt/: CMakeLists.txt  fuck.cpp  greedy_basic_iskhakovt.cpp  greedy_keep_many_iskhakovt.cpp  main.cpp  strategies.h  types.cpp  types.h
iskhakovt/huyak/: iskhakovt  iskhakovt.cbp
output/gb_tft/: b.out
output/greedy_basic_iskhakovt/: a.out  b.out  c.out  d.out  e.out
output/greedy_basic_iskhakovt_cor/: b.out  c.out  d.out  e.out
tft/: greedy_basic_iskhakovt.cpp
thefacetakt/: CMakeLists.txt  main.cpp  renumber.py  validator.py
